# pallet-sponsored-tx

./: .gitignore  AGENTS.md  Cargo.toml  README.md  justfile
.maintain/: frame-weight-template.hbs
demo/: .gitignore  index.html  package-lock.json  package.json
demo/.papi/: polkadot-api.json
demo/.papi/descriptors/: package.json
demo/.papi/metadata/: sponsored.scale
demo/src/: chain.ts  main.ts  sponsor.ts  sponsored-tx.ts  style.css  ui.ts
docs/: architecture_review.md  code_quality_review.md  diagram.md  implementation_status.md  sdk_style_alignment_review.md  security_review.md
examples/subxt-sponsor-client/: Cargo.toml
examples/subxt-sponsor-client/src/: main.rs
pallets/sponsored-tx/: Cargo.toml
pallets/sponsored-tx/src/: benchmarking.rs  extension.rs  lib.rs  mock.rs  tests.rs  types.rs  weights.rs
runtime/: Cargo.toml  build.rs
runtime/src/: benchmarks.rs  lib.rs
runtime/src/configs/: mod.rs
skills/pwalk-sdk-vault/: SKILL.md
