[package]
name = "sponsored-tx-subxt-example"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
anyhow = "1.0.100"
codec = { version = "3.7.5", package = "parity-scale-codec" }
scale-decode = "0.16.2"
scale-encode = "0.10.1"
scale-info = "2.11.6"
subxt = { version = "0.44.2", default-features = false, features = ["jsonrpsee", "native"] }
subxt-signer = "0.44.2"
tokio = { version = "1.48.0", features = ["macros", "rt-multi-thread"] }
